feature: add header section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord-blocks</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+ <header>
+             <nav class="nav-bar">
+          <div class="container">
+            <div class="logo">Logo</div>
+                <div class="link">Link Link Link Link</div>
+                    <div class="login">Login</div>
+            </div>
+        </header>
+    <main>
+    </main>
 </body>
 </html>
