feature: add nav-bar and banner section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             </div>
         </header>
     <main>
+        <main>
+      <div class="banner">
+        <div class="pink-card"></div>     
+        </div>
+        
     </main>
 </body>
 </html>
