chore: add grey container

--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord-blocks</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
- <header>
-             <nav class="nav-bar">
-          <div class="container">
-            <div class="logo">Logo</div>
+    <header>
+        <nav class="nav-bar">
+            <div class="container">
+                <div class="logo">Logo</div>
                 <div class="link">Link Link Link Link</div>
-                    <div class="login">Login</div>
+                <div class="login">Login</div>
             </div>
-        </header>
+    </header>
     <main>
-        <main>
-      <div class="banner">
-        <div class="pink-card"></div>     
+        <!-- BANNER SECTION -->
+        <div class="banner">
+            <div class="pink-card"></div>
         </div>
-        
+        <!-- MAIN-CONTENT -->
+        <section class="main-content">
+            <div class="white-container">
+                <div class="blue-card w-70"></div>
+                <div class="pink-card w-30"></div>
+            </div>
+            <div class="grey-container">
+                 <div class="blue-card w-70"></div>
+                <div class="pink-card w-30"></div>
+            </div>
+
     </main>
 </body>
+
 </html>
