chore: edited some html features + grey container

--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
             <div class="pink-card"></div>
         </div>
         <!-- MAIN-CONTENT -->
-        <section class="main-content">
+        <section class="white-content">
             <div class="white-container">
                 <div class="blue-card w-70"></div>
                 <div class="pink-card w-30"></div>
             </div>
-            <div class="grey-container">
-                 <div class="blue-card w-70"></div>
-                <div class="pink-card w-30"></div>
-            </div>
-
+        </section>
+        <section class="grey-content">
+        <div class="grey-container">
+            <div class="blue-card w-70"></div>
+            <div class="pink-card w-30"></div>
+        </div>
+        </section>
     </main>
 </body>
 
