--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <div class="pink-card w-30"></div>
         </div>
         </section>
+        
+            <section class="white-content">
+            <div class="white-container">
+                <div class="blue-card w-70"></div>
+                <div class="pink-card w-30"></div>
+            </div>
     </main>
 </body>
 
