feature: add button section- project ended

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <div class="link">Link Link Link Link</div>
                 <div class="login">Login</div>
             </div>
+        </nav>
     </header>
     <main>
         <!-- BANNER SECTION -->
@@ -30,22 +31,36 @@
             </div>
         </section>
         <section class="grey-content">
-        <div class="grey-container">
-            <div class="blue-card w-70"></div>
-            <div class="pink-card w-30"></div>
-        </div>
+            <div class="grey-container">
+                <div class="blue-card w-70"></div>
+                <div class="pink-card w-30"></div>
+            </div>
         </section>
 
-            <section class="white-content">
+        <section class="white-content">
             <div class="white-container">
                 <div class="blue-card w-70"></div>
                 <div class="pink-card w-30"></div>
             </div>
-            </section>
-            <section class="green-content">
-                <div class="green-container"></div>
-            </section>
+        </section>
+        <section class="green-content">
+            <div class="green-container"></div>
+        </section>
     </main>
+    <!-- FOOTER SECTION -->
+    <footer>
+           <section class="stretch-section">
+          <div class="salmon"></div>
+          <div class="green"></div>
+          <div class="green"></div>
+          <div class="green"></div>
+          <div class="green"></div>
+        </section>
+       <section class="buttons">
+        <div class="logo">Logo</div>
+        <div class="button">Bottone</div>
+       </section> 
+    </footer>
 </body>
 
 </html>
