project ended (4real)

--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
           <div class="green"></div>
         </section>
        <section class="buttons">
-        <div class="logo">Logo</div>
+         <div class=button-container>
+        <div class="logo-pink">Logo</div>
         <div class="button">Bottone</div>
+         </div>
+           
        </section> 
     </footer>
 </body>
